chore: 更新CrypticLib版本, ScriptCommand现在支持控制台执行